// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCredentialModal should call onSubmit with the correct filtered data when "Save" is clicked: onSubmit, filtered data 1`] = `
[
  [
    {
      "cred_type": "network",
      "name": "Test Credential",
    },
  ],
]
`;

exports[`AddCredentialModal should have the correct title: AddCredentialModal Title 1`] = `
<span
  class="pf-v5-c-modal-box__title-text"
>
  Add Credential: network
</span>
`;

exports[`AddCredentialModal should render a basic component: basic 1`] = `
<Modal
  actions={[]}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  showClose={true}
  title="Add Credential: "
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <Form>
    <CredentialFormFields
      authType="Username and Password"
      formData={
        {
          "auth_token": "",
          "authenticationType": "",
          "become_method": "",
          "become_password": "",
          "become_user": "",
          "name": "",
          "password": "",
          "ssh_key": "",
          "ssh_passphrase": "",
          "username": "",
        }
      }
      handleInputChange={[Function]}
      setAuthType={[Function]}
      typeValue=""
    />
    <ActionGroup>
      <Button
        onClick={[Function]}
        variant="primary"
      >
        Save
      </Button>
      <Button
        onClick={[Function]}
        variant="link"
      >
        Cancel
      </Button>
    </ActionGroup>
  </Form>
</Modal>
`;

exports[`CredentialFormFields should call handlers for setAuthType and handleInputChange: handleInputChange 1`] = `
[
  [
    "become_method",
    "sudo",
  ],
]
`;

exports[`CredentialFormFields should call handlers for setAuthType and handleInputChange: setAuthType 1`] = `
[
  [
    "SSH Key",
  ],
]
`;

exports[`CredentialFormFields should render a basic component: basic 1`] = `
<React.Fragment>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="Name"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      placeholder="Enter a name for the credential"
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="Authentication Type"
  >
    <SimpleDropdown
      dropdownItems={
        [
          "Username and Password",
          "SSH Key",
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="Username"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        placeholder="Enter username"
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="Password"
    >
      <TextInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        placeholder="Enter password"
        type="password"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_method"
      label="Become Method"
    >
      <SimpleDropdown
        dropdownItems={
          [
            "Select option",
            "sudo",
            "su",
            "pbrun",
            "pfexec",
            "doas",
            "dzdo",
            "ksu",
            "runas",
          ]
        }
        isFullWidth={true}
        label="Select option"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="Become User"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        placeholder="Enter become user (optional)"
        type="text"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="Become Password"
    >
      <TextInput
        id="become_password"
        name="become_password"
        onChange={[Function]}
        placeholder="Enter become password (optional)"
        type="password"
      />
    </FormGroup>
  </React.Fragment>
</React.Fragment>
`;

exports[`CredentialFormFields should render specific to authType for type network: network, SSH Key 1`] = `
<React.Fragment>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="Name"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      placeholder="Enter a name for the credential"
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="Authentication Type"
  >
    <SimpleDropdown
      dropdownItems={
        [
          "Username and Password",
          "SSH Key",
        ]
      }
      isFullWidth={true}
      label="SSH Key"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="Username"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        placeholder="Enter username"
      />
    </FormGroup>
    <FormGroup
      fieldId="ssh_key"
      isRequired={true}
      label="SSH Key"
    >
      <TextArea
        id="credential-ssh-key"
        isRequired={true}
        name="ssh_key"
        onChange={[Function]}
        placeholder="Enter SSH Key"
        rows={10}
      />
    </FormGroup>
    <FormGroup
      fieldId="ssh_passphrase"
      label="SSH passphrase"
    >
      <TextInput
        id="ssh_passphrase"
        name="ssh_passphrase"
        onChange={[Function]}
        placeholder="Enter SSH passphrase (optional)"
        type="password"
      />
    </FormGroup>
  </React.Fragment>
</React.Fragment>
`;

exports[`CredentialFormFields should render specific to authType for type network: network, Username and Password 1`] = `
<React.Fragment>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="Name"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      placeholder="Enter a name for the credential"
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="Authentication Type"
  >
    <SimpleDropdown
      dropdownItems={
        [
          "Username and Password",
          "SSH Key",
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="Username"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        placeholder="Enter username"
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="Password"
    >
      <TextInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        placeholder="Enter password"
        type="password"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_method"
      label="Become Method"
    >
      <SimpleDropdown
        dropdownItems={
          [
            "Select option",
            "sudo",
            "su",
            "pbrun",
            "pfexec",
            "doas",
            "dzdo",
            "ksu",
            "runas",
          ]
        }
        isFullWidth={true}
        label="Select option"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="Become User"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        placeholder="Enter become user (optional)"
        type="text"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="Become Password"
    >
      <TextInput
        id="become_password"
        name="become_password"
        onChange={[Function]}
        placeholder="Enter become password (optional)"
        type="password"
      />
    </FormGroup>
  </React.Fragment>
</React.Fragment>
`;

exports[`CredentialFormFields should render specific to authType for type openshift: openshift, "Token" 1`] = `
<React.Fragment>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="Name"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      placeholder="Enter a name for the credential"
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="Authentication Type"
  >
    <SimpleDropdown
      dropdownItems={
        [
          "Token",
          "Username and Password",
        ]
      }
      isFullWidth={true}
      label="Token"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_token"
    isRequired={true}
    label="Token"
  >
    <TextInput
      id="credential-token"
      isRequired={true}
      name="auth_token"
      onChange={[Function]}
      placeholder="Enter Token"
      type="text"
    />
  </FormGroup>
</React.Fragment>
`;

exports[`CredentialFormFields should render specific to authType for type openshift: openshift, "Username and Password" 1`] = `
<React.Fragment>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="Name"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      placeholder="Enter a name for the credential"
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="Authentication Type"
  >
    <SimpleDropdown
      dropdownItems={
        [
          "Token",
          "Username and Password",
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="Username"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        placeholder="Enter username"
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="Password"
    >
      <TextInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        placeholder="Enter password"
        type="password"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_method"
      label="Become Method"
    >
      <SimpleDropdown
        dropdownItems={
          [
            "Select option",
            "sudo",
            "su",
            "pbrun",
            "pfexec",
            "doas",
            "dzdo",
            "ksu",
            "runas",
          ]
        }
        isFullWidth={true}
        label="Select option"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="Become User"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        placeholder="Enter become user (optional)"
        type="text"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="Become Password"
    >
      <TextInput
        id="become_password"
        name="become_password"
        onChange={[Function]}
        placeholder="Enter become password (optional)"
        type="password"
      />
    </FormGroup>
  </React.Fragment>
</React.Fragment>
`;

exports[`useCredentialForm should derive token auth for specific credential types: token auth 1`] = `
{
  "openshift": "Token",
  "rhacs": "Token",
}
`;

exports[`useCredentialForm should initialize formData correctly: formData 1`] = `
{
  "auth_token": "",
  "authenticationType": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
}
`;
